fix padding on mobile/desktop for container-small, and info-header

--- a/style/info.css
+++ b/style/info.css
@@ -11,8 +11,8 @@
     background-image: -webkit-linear-gradient(right, #C41E3A 0%, #A61931 100%);
     /* W3C Markup */
     background-image: linear-gradient(to left, #C41E3A 0%, #A61931 100%);
-    /* height: 30%; */
-    padding: 8%;
+    height: 20%;
+    padding: 1em;
     margin-top: 86px;
 }
 
